--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 					<div class="px-2">
 						<div class="mt-4 p-3 bg-gray-50 rounded-lg border border-gray-200">
 							<div class="text-xs text-gray-500 text-center">
-								<span class="font-medium">SmartzProd</span> <span class="text-gray-400">v2.1.0</span>
+								<span class="font-medium">SmartzProd</span> <span class="text-gray-400">v2.2.5</span>
 								<br />
 								<span class="text-gray-400">Made with ❤️</span>
 							</div>
@@ -691,6 +691,12 @@
 													<span class="text-[10px] font-normal">(BCM/Jam)</span>
 												</div>
 											</th>
+											<th scope="col" class="px-3 sm:px-4 lg:px-6 py-3 text-left text-xs font-bold text-blue-900 uppercase tracking-wider border-b-2 border-blue-200">
+												<div class="flex items-center gap-1">
+													<span>Delay</span>
+													<span class="text-[10px] font-normal">(Menit)</span>
+												</div>
+											</th>
 											<th scope="col" class="px-3 sm:px-4 lg:px-6 py-3 text-center text-xs font-bold text-blue-900 uppercase tracking-wider border-b-2 border-blue-200">Aksi</th>
 										</tr>
 									</thead>
@@ -953,6 +959,13 @@
 								<p><strong>• HM Akhir:</strong> Hour Meter akhir</p>
 							</div>
 						</div>
+						<div class="bg-orange-50 rounded-lg p-3 sm:p-4 mb-3 border-l-4 border-orange-500">
+							<p class="text-xs sm:text-sm font-mono text-orange-900 mb-2"><strong>Rumus Delay:</strong> Delay = 60 × (HM Akhir - HM Awal)</p>
+							<div class="text-xs sm:text-sm text-gray-700 space-y-1">
+								<p><strong>• Delay:</strong> Waktu delay dalam menit</p>
+								<p><strong>• Hasil:</strong> Selisih HM dikalikan 60 untuk konversi jam ke menit</p>
+							</div>
+						</div>
 						<div class="bg-gray-50 rounded-lg p-3 sm:p-4">
 							<p class="text-xs sm:text-sm font-semibold text-gray-700 mb-2">📊 Contoh:</p>
 							<ul class="text-xs sm:text-sm text-gray-600 space-y-1">
@@ -961,6 +974,7 @@
 								<li>• HM Awal: 95</li>
 								<li>• HM Akhir: 96</li>
 								<li>• <strong>Productivity = (12 × 42) / (96 - 95) = 504 bcm/jam</strong></li>
+								<li>• <strong>Delay = 60 × (96 - 95) = 60 menit</strong></li>
 							</ul>
 						</div>
 					</div>
@@ -1066,7 +1080,7 @@
 							<i class="fas fa-keyboard mr-1"></i>
 							Tekan <kbd class="px-1.5 py-0.5 bg-gray-200 rounded text-gray-600 font-mono text-[9px] sm:text-xs">ESC</kbd> untuk menutup
 						</p>
-						<p class="text-[10px] sm:text-xs text-gray-400">v2.1.0</p>
+						<p class="text-[10px] sm:text-xs text-gray-400">v2.2.5</p>
 					</div>
 				</div>
 			</div>
@@ -1201,7 +1215,6 @@
 								<span class="text-purple-600 font-bold">3</span>
 							</div>
 							<h3 class="text-base sm:text-lg font-bold text-gray-800">Dokumentasi Masalah</h3>
-							<span class="text-xs text-red-500 font-semibold">*</span>
 						</div>
 
 						<!-- Photo Upload Button -->
@@ -1240,7 +1253,26 @@
 							<div class="w-8 h-8 bg-blue-100 rounded-lg flex items-center justify-center">
 								<span class="text-blue-600 font-bold">4</span>
 							</div>
-							<h3 class="text-base sm:text-lg font-bold text-gray-800">Follow Up Perbaikan <span class="text-red-500">*</span></h3>
+							<h3 class="text-base sm:text-lg font-bold text-gray-800">Follow Up Perbaikan</h3>
+						</div>
+
+						<!-- Photo Upload Button for Follow Up -->
+						<div class="mb-4">
+							<input type="file" id="followUpPhotoInput" accept="image/*" class="hidden" multiple />
+							<button
+								id="followUpPhotoBtn"
+								type="button"
+								class="w-full px-4 py-3 bg-gradient-to-r from-blue-500 to-blue-600 text-white rounded-lg hover:from-blue-600 hover:to-blue-700 transition-all duration-200 flex items-center justify-center gap-2 font-semibold shadow-md hover:shadow-lg">
+								<i class="fas fa-camera text-lg"></i>
+								<span>Ambil Foto / Upload Gambar</span>
+								<span id="followUpPhotoCountBadge" class="hidden ml-2 px-2 py-0.5 bg-white/20 rounded-full text-xs font-bold"></span>
+							</button>
+						</div>
+						<!-- Photo Preview Grid for Follow Up -->
+						<div id="followUpPhotoPreviewContainer" class="hidden mb-4">
+							<div class="grid grid-cols-2 sm:grid-cols-3 gap-3" id="followUpPhotoPreviewGrid">
+								<!-- Photo previews will be inserted here dynamically -->
+							</div>
 						</div>
 
 						<!-- Keterangan Follow Up -->
