--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 					<div class="px-2">
 						<div class="mt-4 p-3 bg-gray-50 rounded-lg border border-gray-200">
 							<div class="text-xs text-gray-500 text-center">
-								<span class="font-medium">SmartzProd</span> <span class="text-gray-400">v2.2.6</span>
+								<span class="font-medium">SmartzProd</span> <span class="text-gray-400">v2.3.0</span>
 								<br />
 								<span class="text-gray-400">Made with ❤️</span>
 							</div>
@@ -693,6 +693,12 @@
 											</th>
 											<th scope="col" class="px-3 sm:px-4 lg:px-6 py-3 text-left text-xs font-bold text-blue-900 uppercase tracking-wider border-b-2 border-blue-200">
 												<div class="flex items-center gap-1">
+													<span>WH</span>
+													<span class="text-[10px] font-normal">(Menit)</span>
+												</div>
+											</th>
+											<th scope="col" class="px-3 sm:px-4 lg:px-6 py-3 text-left text-xs font-bold text-blue-900 uppercase tracking-wider border-b-2 border-blue-200">
+												<div class="flex items-center gap-1">
 													<span>Delay</span>
 													<span class="text-[10px] font-normal">(Menit)</span>
 												</div>
@@ -959,22 +965,32 @@
 								<p><strong>• HM Akhir:</strong> Hour Meter akhir</p>
 							</div>
 						</div>
-						<div class="bg-orange-50 rounded-lg p-3 sm:p-4 mb-3 border-l-4 border-orange-500">
-							<p class="text-xs sm:text-sm font-mono text-orange-900 mb-2"><strong>Rumus Delay:</strong> Delay = 60 × (HM Akhir - HM Awal)</p>
+						<div class="bg-cyan-50 rounded-lg p-3 sm:p-4 mb-3 border-l-4 border-cyan-500">
+							<p class="text-xs sm:text-sm font-mono text-cyan-900 mb-2"><strong>Rumus WH (Working Hour):</strong> WH = (HM Akhir - HM Awal) × 60</p>
 							<div class="text-xs sm:text-sm text-gray-700 space-y-1">
-								<p><strong>• Delay:</strong> Waktu delay dalam menit</p>
+								<p><strong>• WH:</strong> Waktu produktif dalam menit</p>
 								<p><strong>• Hasil:</strong> Selisih HM dikalikan 60 untuk konversi jam ke menit</p>
 							</div>
 						</div>
+						<div class="bg-orange-50 rounded-lg p-3 sm:p-4 mb-3 border-l-4 border-orange-500">
+							<p class="text-xs sm:text-sm font-mono text-orange-900 mb-2"><strong>Rumus Delay:</strong> Delay = (⌈HM Akhir - HM Awal⌉ - (HM Akhir - HM Awal)) × 60</p>
+							<div class="text-xs sm:text-sm text-gray-700 space-y-1">
+								<p><strong>• Delay:</strong> Waktu non-produktif dalam menit</p>
+								<p><strong>• ⌈⌉:</strong> Pembulatan ke atas (ceiling function)</p>
+								<p><strong>• Hasil:</strong> Selisih antara target WH dan WH aktual, dikalikan 60</p>
+							</div>
+						</div>
 						<div class="bg-gray-50 rounded-lg p-3 sm:p-4">
-							<p class="text-xs sm:text-sm font-semibold text-gray-700 mb-2">📊 Contoh:</p>
+							<p class="text-xs sm:text-sm font-semibold text-gray-700 mb-2">📊 Contoh Perhitungan:</p>
 							<ul class="text-xs sm:text-sm text-gray-600 space-y-1">
 								<li>• Ritase: 12/jam</li>
 								<li>• Kapasitas Vessel: 42 bcm</li>
 								<li>• HM Awal: 95</li>
-								<li>• HM Akhir: 96</li>
-								<li>• <strong>Productivity = (12 × 42) / (96 - 95) = 504 bcm/jam</strong></li>
-								<li>• <strong>Delay = 60 × (96 - 95) = 60 menit</strong></li>
+								<li>• HM Akhir: 96.8</li>
+								<li>• <strong>Productivity = (12 × 42) / (96.8 - 95) = 504 bcm/jam</strong></li>
+								<li>• <strong>WH = (96.8 - 95) × 60 = 108 menit</strong></li>
+								<li>• <strong>WH Target = ⌈1.8⌉ = 2 jam</strong></li>
+								<li>• <strong>Delay = (2 - 1.8) × 60 = 12 menit</strong></li>
 							</ul>
 						</div>
 					</div>
@@ -1080,7 +1096,7 @@
 							<i class="fas fa-keyboard mr-1"></i>
 							Tekan <kbd class="px-1.5 py-0.5 bg-gray-200 rounded text-gray-600 font-mono text-[9px] sm:text-xs">ESC</kbd> untuk menutup
 						</p>
-						<p class="text-[10px] sm:text-xs text-gray-400">v2.2.6</p>
+						<p class="text-[10px] sm:text-xs text-gray-400">v2.3.0</p>
 					</div>
 				</div>
 			</div>
